# VoltIQ

./: .env.step2.example  .gitignore  AGENTS.md  README.md  docker-compose.step2.yml  install.sh
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260318_0001_step5_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  db.py
backend/app/db/: __init__.py  base.py  enums.py  models.py
backend/app/integrations/dify/: __init__.py  client.py  exceptions.py  schemas.py
backend/app/modules/audit/: router.py
backend/app/modules/auth/: deps.py  repository.py  router.py  schemas.py  security.py  service.py
backend/app/modules/content/: __init__.py  deps.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/crm/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/kb/: __init__.py  deps.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/leads/: __init__.py  repository.py  router.py  schemas.py  (+1 more)
backend/app/rbac/: __init__.py  policy.py  types.py
backend/scripts/: benchmark_step12_dify_latency.py  seed_step16_auth_users.py  verify_step12_dify.py  verify_step13_kb_api.py
backend/tests/: test_api_health.py  test_auth_api.py  test_content_tasks_api.py  test_crm_follow_ups_api.py  test_crm_opportunities_deals_api.py  test_dify_client.py  test_kb_chat_api.py  test_leads_api.py  test_metrics_api.py  test_rbac_policy.py  test_step12_latency_benchmark.py
(+52 files in other folders)
