[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voltiq-backend"
version = "0.1.0"
description = "VoltIQ backend database baseline for Step 5."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2.0",
  "SQLAlchemy>=2.0.36,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
