[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voltiq-backend"
version = "0.1.0"
description = "VoltIQ backend foundation with DB baseline and FastAPI skeleton."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<1.0",
  "SQLAlchemy>=2.0.36,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "uvicorn>=0.34,<1.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
